Preventing the cropping of series titles

--- a/sass/series-card.sass
+++ b/sass/series-card.sass
@@ -38,17 +38,17 @@
 
   .series-name
     font-size: 14px
-    margin-bottom: 4px
     font-weight: 600
 
     a
       color: var(--text-primary)
       display: block
       text-overflow: ellipsis
-      overflow: hidden
+      overflow-x: hidden
       white-space: nowrap
       text-decoration: none
       user-select: text
+      padding-bottom: 6px
 
     a:hover
       color: var(--button-link-active)
@@ -62,10 +62,11 @@
     flex: 1 1
     font-size: 12px
     text-overflow: ellipsis
-    overflow: hidden
+    overflow-x: hidden
     white-space: nowrap
     color: var(--text-primary)
     user-select: text
+    padding-bottom: 2px
 
 .series-controls
   border-top: 1px solid var(--clr-separator-light)
